--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,8 @@
     <nav>
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed"
-                data-bs-toggle="collapse"
-                data-bs-target="#bs-example-navbar-collapse-1">
+                data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -18,7 +18,7 @@
         <% if logged_in? %>
           <li><%=link_to 'Users', users_path%></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
