--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -172,6 +172,11 @@ input{
     font-weight: normal;
   }
 }
+
+.checkbox-completed{
+  padding-left: 10px;
+  width: auto
+}
 #session_remember_me{  /* asta e stiling-ul al casutei propriu-zise */
   width: auto;
   margin-left: 0;
@@ -190,29 +195,6 @@ input{
   padding-top: 30px;
 }
 
-/* microposts */
-.microposts {
-  list-style: none; padding: 0;
-  li {
-    padding: 10px 0;
-    border-top: 1px solid #e8e8e8; }
-  .user { margin-top: 5em; padding-top: 0;
-  }
-  .title {
-    padding: 5px;
-  }
-  .content {
-    display: block; margin-left: 60px; img {
-    display: block;
-    padding: 5px 0; }
-  }
-  .timestamp {
-    color: $gray-light; display: block; margin-left: 60px;
-  }
-  .gravatar {
-    float: left; margin-right: 10px; margin-top: 5px;
-  }
-}
 aside { textarea {
   height: 100px;
   margin-bottom: 5px; }
@@ -224,4 +206,19 @@ textarea {
 
 .modal-backdrop {
   background-color: rgba(0,0,0,0.5);
+}
+
+.delete-list-button{
+  position: absolute;
+  padding-right: 15px;
+
+  float: right;
+}
+
+.card{
+  padding: 10px;
+  border: solid #2E2F30;
+  .card-body{
+    padding: 10px;
+  }
 }
