--- a/app/views/user_todo_lists/show.html.erb
+++ b/app/views/user_todo_lists/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component('ToDoList', todoList: @user_todo_list) %>
+<%= react_component('ToDoList', todoList: @user_todo_list, listTags: @tags) %>
