--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,9 +1,6 @@
-<h1>
-  <%= @team.name %>
-</h1>
-<%= link_to "Edit Team", edit_team_path(@team), class: "btn btn-primary"%>
-<% if current_user?(@team.owner)%>
-  <%= link_to "Delete", @team, method: "delete",
-                    data: {confirm: "Are you sure?"},
-                    class: "btn btn-primary" %>
-<% end %>
+<%= react_component('TeamPage',
+                    team: @team,
+                    invitedUsers: @team.invited_users,
+                    members: @team.members,
+                    userIsTeamAdmin: @team.team_admin?(current_user),
+                    userIsTeamOwner: current_user?(@team.owner))%>
