--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
       <h1>
       <%= gravatar_for @user, size: 100%>
       <%= @user.name %>
+      <%= "##{@user.id}" %>
       </h1>
     </section>
   </aside>
