Added accept, reject, retract team invitation, promote, demote member, kick member, leave team

--- a/app/views/users/my_teams.html.erb
+++ b/app/views/users/my_teams.html.erb
@@ -1,3 +1,4 @@
+<h3>My Teams:</h3>
 <%= link_to "Create a new team", new_team_path , class:'btn btn-primary'%>
 <% if @teams.size == 0 %>
   <div>
@@ -12,3 +13,5 @@
   </ul>
 <% end %>
 
+<h4>Received Team Invitations:</h4>
+<%= render @team_invitations %>
