--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -6,4 +6,5 @@
                     teamMemberships: @team_memberships,
                     userIsTeamAdmin: @team.team_admin?(current_user),
                     userIsTeamOwner: current_user?(@team.owner),
-                    currentUserId: current_user.id)%>
+                    currentUserId: current_user.id,
+                    teamProjects: @team.team_projects)%>
