Added calendar events and popups to view them and tasks in calendar window

--- a/app/views/users/calendar.html.erb
+++ b/app/views/users/calendar.html.erb
@@ -3,4 +3,5 @@
 <%= react_component('CalendarPage',
                     currentDate: @current_date,
                     userCalendar: true,
-                    currentUserId: current_user.id) %>
+                    currentUserId: current_user.id,
+                    currentTeamId: nil) %>
