--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to "Friends", friend_list_user_path(current_user) %></li>
               <li><%= link_to "Todo Lists", user_user_todo_lists_path(current_user) %></li>
               <li><%= link_to "My Calendar", calendar_user_path(current_user) %></li>
               <li><%= link_to "My Teams", my_teams_user_path(current_user) %></li>
