Added working event invitations

--- a/app/views/teams/calendar.html.erb
+++ b/app/views/teams/calendar.html.erb
@@ -4,4 +4,5 @@
                     currentDate: @current_date,
                     userCalendar: false,
                     currentUserId: current_user.id,
-                    currentTeamId: @team.id) %>
+                    currentTeamId: @team.id,
+                    invitableUsers: @team.members) %>
