--- a/app/views/users/calendar.html.erb
+++ b/app/views/users/calendar.html.erb
@@ -4,4 +4,5 @@
                     currentDate: @current_date,
                     userCalendar: true,
                     currentUserId: current_user.id,
-                    currentTeamId: nil) %>
+                    currentTeamId: nil,
+                    invitableUsers: current_user.friends) %>
