Added filters for team calendar

--- a/app/views/teams/calendar.html.erb
+++ b/app/views/teams/calendar.html.erb
@@ -5,4 +5,5 @@
                     userCalendar: false,
                     currentUserId: current_user.id,
                     currentTeamId: @team.id,
-                    invitableUsers: @team.members) %>
+                    invitableUsers: @team.members,
+                    availableFilters: @filters) %>
