Added filters for personal calendar

--- a/app/views/users/calendar.html.erb
+++ b/app/views/users/calendar.html.erb
@@ -5,4 +5,5 @@
                     userCalendar: true,
                     currentUserId: current_user.id,
                     currentTeamId: nil,
-                    invitableUsers: current_user.friends + [current_user]) %>
+                    invitableUsers: current_user.friends + [current_user],
+                    availableFilters: @filters) %>
