--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, "Sign Up") %>
 <% provide(:form_button_text, "Sign Up") %>
-<h1>Sign Up</h1>
 <div class='row'>
-  <div class='col-md-6 col-md-offset-3'>
+  <div class='col-md-6 col-md-offset-3 jumbotron'>
+    <h1>Sign Up</h1>
     <%= render "users/form" %>
   </div>
 </div>
