--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,12 +1,13 @@
 <% provide(:title, "Forgot Password") %>
-<h1>Forgot password</h1>
+
 <div class='row'>
-  <div class='col-md-6 col-md-offset-3'>
+  <div class='col-md-6 col-md-offset-3 jumbotron'>
+    <h2>Forgot password</h2>
     <%= form_with(url: password_resets_path, scope: :password_reset, local: true) do |f|%>
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.submit 'Submit', class: 'btn btn-primary' %>
+      <%= f.submit 'Submit', class: 'btn btn-primary button-dark' %>
     <% end %>
   </div>
 </div>
