--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,7 +1,10 @@
-<%= link_to gravatar_for(current_user, size: 50), current_user %>
-<h1>
-  <%= current_user.name %>
-</h1>
+<section class='user-info'>
+  <div>
+    <%= gravatar_for current_user, size: 100%>
+    <%= current_user.name %>
+    <%= "##{current_user.id}" %>
+  </div>
+</section>
 <span class="user-information">
   <%= link_to 'view my profile', current_user %>
 </span>
