--- a/app/views/static_pages/_logged_in_home.html.erb
+++ b/app/views/static_pages/_logged_in_home.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <aside class="col-md-4">
-    <section class="user_info">
+    <section class="user-info">
       <%= render 'shared/user_info' %>
     </section>
   </aside>
