--- a/app/views/static_pages/_not_logged_in_home.html.erb
+++ b/app/views/static_pages/_not_logged_in_home.html.erb
@@ -1,6 +1,4 @@
 <div class="center jumbotron">
   <h1>Welcome to my Organizer App</h1>
-  <%= link_to "Sign up now!", signup_path, class: "btn, brn-lg, btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary button-dark" %>
 </div>
-
-<%= link_to image_tag("rails.svg", alt: "Rails logo", width: 200, height: 150), "https://rubyonrails.org/" %>
