--- a/app/views/team_projects/edit.html.erb
+++ b/app/views/team_projects/edit.html.erb
@@ -1,6 +1,7 @@
 <% provide(:form_button_text, "Save changes") %>
 <div class='row'>
-  <div class='col-md-6 col-md-offset-3'>
+  <div class='col-md-6 col-md-offset-3 jumbotron'>
+    <h1>Edit Project</h1>
     <%= render "team_projects/form" %>
   </div>
 </div>
