--- a/app/views/team_projects/show.html.erb
+++ b/app/views/team_projects/show.html.erb
@@ -1,10 +1,10 @@
 <h3>
   <%=@team_project.name %>
   <% if @team.team_admin?(current_user) %>
-    <%= link_to "Edit Project Name", edit_team_team_project_path(@team, @team_project), class: 'btn btn-primary' %>
+    <%= link_to "Edit Project Name", edit_team_team_project_path(@team, @team_project), class: 'btn btn-primary button-dark' %>
   <% end %>
 </h3>
-<%= link_to "Go to Team", team_path(@team), class: 'btn btn-primary' %>
+<%= link_to "Go to Team", team_path(@team), class: 'btn btn-primary button-dark' %>
 <br/>
 <%= react_component('ProjectTasksBoard',
                     teamProject: @team_project,
@@ -13,5 +13,5 @@
                     currentUserId: current_user.id)%>
 <% if @team.team_admin?(current_user) %>
   <br/>
-  <%= link_to "Delete Project", team_team_project_path(@team, @team_project), method: 'delete', data: {confirm: "Are you sure?"},  class: 'btn btn-danger' %>
+  <%= link_to "Delete Project", team_team_project_path(@team, @team_project), method: 'delete', data: {confirm: "Are you sure?"},  class: 'btn btn-primary button-dark-red' %>
 <% end %>
