--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -5,5 +5,5 @@
   <%= f.text_field :name, class: 'form-control' %>
 
   <%= f.hidden_field :owner_id, value: current_user.id %>
-  <%= f.submit yield(:form_button_text), class: 'btn btn-primary' %>
+  <%= f.submit yield(:form_button_text), class: 'btn btn-primary button-dark' %>
 <% end %>
