--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,6 +1,7 @@
 <% provide(:form_button_text, "Create Team") %>
 <div class='row'>
-  <div class='col-md-6 col-md-offset-3'>
+  <div class='col-md-6 col-md-offset-3 jumbotron'>
+    <h1>Create a new Team</h1>
     <%= render "teams/form" %>
   </div>
 </div>
