--- a/app/views/user_todo_lists/_user_todo_list.html.erb
+++ b/app/views/user_todo_lists/_user_todo_list.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <%= link_to user_todo_list.name, user_user_todo_list_path(@user, user_todo_list) %>
+  <%= link_to "#{user_todo_list.name} (#{user_todo_list.individual_tasks.where(completed: true).size}/#{user_todo_list.individual_tasks.size})", user_user_todo_list_path(@user, user_todo_list), class: 'user-todo-list-link' %>
 </li>
