--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,5 +13,5 @@
   <%= f.label :password_confirmation, 'Confirmation' %>
   <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-  <%= f.submit yield(:form_button_text), class: 'btn btn-primary' %>
+  <%= f.submit yield(:form_button_text), class: 'btn btn-primary button-dark' %>
 <% end %>
