--- a/app/views/users/_send_friendship_request.html.erb
+++ b/app/views/users/_send_friendship_request.html.erb
@@ -2,5 +2,5 @@
   <div>
     <%= hidden_field_tag :receiver_id, @user.id %>
   </div>
-  <%= f.submit "Add Friend", class: 'btn btn-primary' %>
+  <%= f.submit "Add Friend", class: 'btn btn-primary button-friendship-action' %>
 <% end %>
