--- a/app/views/users/_unfriend.html.erb
+++ b/app/views/users/_unfriend.html.erb
@@ -1,3 +1,3 @@
 <%= form_with(model: current_user.friendships.where('receiver_id = ? or sender_id = ?', @user.id, @user.id).first, html: { method: :delete }, remote: true) do |f| %>
-  <%= f.submit "Unfriend", class: 'btn btn-primary' %>
+  <%= f.submit "Unfriend", class: 'btn btn-primary button-friendship-action' %>
 <% end %>
