--- a/app/views/users/calendar.html.erb
+++ b/app/views/users/calendar.html.erb
@@ -1,9 +1,11 @@
 <%= stylesheet_pack_tag '' %>
-<h2>Your Calendar</h2>
-<%= react_component('CalendarPage',
-                    currentDate: @current_date,
-                    userCalendar: true,
-                    currentUserId: current_user.id,
-                    currentTeamId: nil,
-                    invitableUsers: current_user.friends + [current_user],
-                    availableFilters: @filters) %>
+<div class="jumbotron">
+  <h1>Your Calendar</h1>
+  <%= react_component('CalendarPage',
+                      currentDate: @current_date,
+                      userCalendar: true,
+                      currentUserId: current_user.id,
+                      currentTeamId: nil,
+                      invitableUsers: current_user.friends + [current_user],
+                      availableFilters: @filters) %>
+</div>
