--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,14 @@
 <% provide(:title, "Edit User") %>
 <% provide(:form_button_text, "Save changes") %>
-<h1>Edit user profile</h1>
 <div class='row'>
-  <div class='col-md-6 col-md-offset-3'>
-    <%= render "users/form" %>
+  <div class='col-md-6 col-md-offset-3 jumbotron'>
+    <h1>Edit user profile</h1>
     <div class="gravatar">
       <%= gravatar_for(@user) %>
-      <a href="https://gravatar.com/emails" target="_blank" rel="noopener">change</a>
+      <br/>
+      <a href="https://gravatar.com/emails" target="_blank" rel="noopener" class="btn button-change-gravatar">Change</a>
     </div>
+    <br/>
+    <%= render "users/form" %>
   </div>
 </div>
