--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,10 @@
 <% provide(:title, "All Users") %>
-<h1>All Users</h1>
+<div class="jumbotron">
+  <h1>All Users</h1>
 
-<%= will_paginate %>
-
-<ul class="users">
-  <% @users.each do |user| %>
-    <%= render user %>
-  <% end %>
-  <!--  e echivalent cu < %= render @users %>   -->
-</ul>
-
-<%= will_paginate %>
+  <%= will_paginate %>
+  <ul class="users">
+    <%= render @users %>
+  </ul>
+  <%= will_paginate %>
+</div>
