--- a/app/views/teams/calendar.html.erb
+++ b/app/views/teams/calendar.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_pack_tag '' %>
-<div class="jumbotron">
+<div>
   <h1>Team Calendar</h1>
   <%= react_component('CalendarPage',
                       currentDate: @current_date,
