--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -275,7 +275,7 @@ textarea {
           text-align: center;
           background-color: #2E2F30;
           color: white;
-          border-radius: 2px;
+          border-radius: 10px;
           display: flex;
           align-items: center;
           margin-right: 5px;
@@ -323,7 +323,7 @@ textarea {
   .radio-button-div{
     display: inline;
     align-items: start;
-    width: 100px;
+    width: 130px;
     .radio-label{
       width: 70%
     }
@@ -334,10 +334,16 @@ textarea {
 }
 
 .kanban-container {
+  min-height: 500px;
   height: 500px;
-  overflow: auto;
+  min-width: 1250px;
+  overflow-x: scroll;
+  justify-content: space-between;
+  display: flex;
   .kanban-column-container{
-    height: 100%;
+    min-height: 100%;
+    height: fit-content;
+    width: 20%;
     background-color: #2f3030;
     border: 2px solid #2E2F30;
     border-radius: 10px;
@@ -479,7 +485,7 @@ textarea {
   }
 }
 
-.user-name-link, .user-todo-list-link, .user-team, .user-team-invitation, .team-project-link, .team-member-link{
+.user-name-link, .user-todo-list-link, .user-team, .user-team-invitation, .team-project-link, .team-member-link, .invited-user-link{
   font-size: 20px;
   color: black;
 }
@@ -522,7 +528,7 @@ textarea {
         padding-left: 15px;
       }
 
-      .radio-button-calendar{
+      .radio-button-red{
         accent-color: $rosu-inchis;
       }
     }
@@ -532,6 +538,10 @@ textarea {
       padding-left: 0;
     }
   }
+}
+
+.radio-button-red{
+  accent-color: $rosu-inchis;
 }
 
 .answer{
@@ -548,4 +558,76 @@ td{
 
 .checkbox-completed{
   accent-color: $rosu-inchis
+}
+
+.team_invites{
+  width: fit-content;
+  overflow-wrap: break-word;
+  .user-team-invitation-container{
+    .user-team-invitation{
+      justify-content: space-between;
+    }
+  }
+}
+
+.team-members-and-invitations{
+  float: right;
+  border: 1px solid $gray-lighter;
+  padding: 5px;
+  overflow-y: scroll;
+  height: 70vh;
+}
+
+.team-projects-index{
+  float: left;
+}
+
+.team-owner-commands{
+  float: right;
+  .team-owner-command{
+    display: inline-block;
+  }
+}
+
+.team-user-command{
+  float: right;
+}
+
+.tags-container{
+  .content-tags{
+    width: fit-content;
+    display: flex;
+    flex-flow: wrap;
+  }
+  .tag-row{
+    display: inherit;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    .tag-text-container{
+      min-width: 45px;
+      height: 25px;
+      text-align: center;
+      background-color: #2E2F30;
+      color: white;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      margin-right: 5px;
+    }
+
+    .text{
+      padding: 10px;
+      margin: 0px
+    }
+
+    .delete-tag-button{
+      width: 15px;
+      text-align: center;
+      vertical-align: top;
+      opacity: 1;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+  }
 }
