--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -359,10 +359,12 @@ textarea {
       color: white;
       .task-card{
         width: auto;
+        height: auto;
         border: 2px solid #2E2F30;
         border-radius: 10px;
         font-size-adjust: inherit;
         background-color: #494A4A;
+        margin: 2px;
         .task-name{
           font-size: 15px;
         }
@@ -546,14 +548,17 @@ textarea {
 
 .answer{
   vertical-align: baseline;
-  margin: 0 0 0 10px;
   align-self: center;
   width: 120px;
 }
 
+.invitee-name{
+  border-right: 1px solid $gray-lighter;
+}
+
 td{
-  text-align: center;
-  max-width: 120px;
+  width: 120px;
+  padding: 5px;
 }
 
 .checkbox-completed{
