--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -636,3 +636,68 @@ td{
     }
   }
 }
+
+.todo-list{
+  min-height: 600px;
+}
+
+.loader{
+  align-content: center;
+  align-self: center;
+  width: 150px;
+  height: 150px;
+  border-radius: 10rem;
+  border: 3px solid white;
+  background: linear-gradient($rosu-inchis, #2E2F30);
+  box-shadow: 0px 0px 100px -50px black;
+  animation: animate 1s linear infinite;
+}
+
+.loader::before{
+  position: absolute;
+  content: "";
+  background: #fff;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 80%;
+  border-radius: 10rem;
+  border: 3px solid white;
+  box-shadow: inset 0px 0px 100px -70px #111;
+}
+
+@keyframes animate{
+  from{
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.small-loader{
+  align-content: center;
+  align-self: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 10rem;
+  border: 3px solid white;
+  background: linear-gradient($rosu-inchis, #2E2F30);
+  box-shadow: 0px 0px 100px -50px black;
+  animation: animate 1s linear infinite;
+}
+
+.small-loader::before{
+  position: absolute;
+  content: "";
+  background: #fff;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 80%;
+  border-radius: 10rem;
+  border: 3px solid white;
+  box-shadow: inset 0px 0px 100px -70px #111;
+}
