Styled the common friends page

--- a/app/views/users/common_friends.html.erb
+++ b/app/views/users/common_friends.html.erb
@@ -1,4 +1,7 @@
-Common Friends (<%= @common_friends.size %>):
-<ul class="users">
-  <%= render @common_friends %>
-</ul>
+<div class="jumbotron">
+  <h1>Common Friends</h1>
+  <h3>Common Friends (<%= @common_friends.size %>):</h3>
+  <ul class="users">
+    <%= render @common_friends %>
+  </ul>
+</div>
