--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,9 @@
         <div class = "alert alert-<%= message_type %>">
           <%= message %>
         </div>
-        <!-- echivalent cu  <%= content_tag(:div, message, class: "alert alert-#{ message_type }") %> -->
       <% end %>
-      <%= yield %>   <!--Insereaza continutul fiecarei pagini in layout-->
+      <%= yield %>
     </div>
-    <%= debug(params) if Rails.env.development? %> <!-- Restrictioneaza informatiile de debug in environmentul de development, sa nu apara la useri-->
+    <%#= debug(params) if Rails.env.development? %>
   </body>
 </html>
